# rate-con-extractor

./: README.md  extractor.py  main.py  model.py  pyproject.toml  settings.py  vercel.json
static/: index.html  script.js  style.css
