[project]
name = "rate-con-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "google-genai>=2.10.0",
    "mangum>=0.21.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pymupdf-layout>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "python-multipart>=0.0.32",
]
